# TinyProject

./: README.md
cppprog/: greetings
cppprog/greetings/: Makefile  greet.cpp  pithy.cpp  pithy.h
cprog/: README.md
cprog/caesar/: buffering01.c  casearTwoAarguments.c  filter01.c  subverseCharacter.c
cprog/greetings/: Makefile  README.md  greet.c  greetings  pithy.c  pithy.h
cprog/nano/: nato01  nato02  nato03
cprog/nato/: natoReverseFile.c  natoUsingFile.c
pyprog/EditFilesUsingSubstrings/: create_files.sh  findJane.sh
pyprog/HandleFiles/: generate_report.py
pyprog/ImplementUnitTesting/: emails.py  emails_test.py
pyprog/LogAnalysisWithRegularExpressions/: csv_to_html.py  error.html  error_message.csv  statis.html  ticky_check.py  user_statistics.csv
pyprog/WorkWithLogFiles/: find_error.py
pyprog/WorkWithRegularExpressions/: python_virtual_env.md  script.py
pyprog/WorkWithRegularExpressions/myenv/: pyvenv.cfg
pyprog/greetings/: greet.py  pithy.py
rustprog/greetings/: Cargo.toml  README.md  build.rs
rustprog/greetings/src/: greet.rs  pithy.rs
sysprog/: myshell.c
sysprog/shell/: myshell.c
